force-app/main/default/objects/Product2/fields/ExternalKeyLookup__c.field-meta.xml
<CustomField>
    <fullName>ExternalKeyLookup__c</fullName>
    <formula>Name &amp; TEXT(Division__c) &amp; ImerysManufacturingPlant__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ExternalKeyLookup</label>
    <type>Text</type>
</CustomField>