force-app/main/default/objects/Product2/fields/frmProduct2Search__c.field-meta.xml
<CustomField>
    <fullName>frmProduct2Search__c</fullName>
    <formula>Name &amp;&quot; - &quot;&amp; ImerysManufacturingPlant__r.Name</formula>
    <label>frmProduct2Search</label>
    <type>Text</type>
</CustomField>