force-app/main/default/objects/Product2/fields/Inactive__c.field-meta.xml
<CustomField>
    <fullName>Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This product can only be used in Complaints/Remarks, Consumptions, and Sales Data.</inlineHelpText>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>