force-app/main/default/objects/Product2/fields/Manufacturing_Plant__c.field-meta.xml
<CustomField>
    <fullName>Manufacturing_Plant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manufacturing Plant</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Manufacturing_Plant__c.Imerys_Site__r.ImerysManufacturingPlant__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Manufacturing_Plant__c</referenceTo>
    <relationshipLabel>Imerys Products</relationshipLabel>
    <relationshipName>Imerys_Products</relationshipName>
    <type>Lookup</type>
</CustomField>