force-app/main/default/objects/Product2/fields/ManufacturingPlant__c.field-meta.xml
<CustomField>
    <fullName>ManufacturingPlant__c</fullName>
    <label>ManufacturingPlant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>