force-app/main/default/objects/Product2/fields/Material_Group_5__c.field-meta.xml
<CustomField>
    <fullName>Material_Group_5__c</fullName>
    <label>Material Group 5</label>
    <length>255</length>
    <type>Text</type>
</CustomField>