force-app/main/default/objects/Product2/fields/NewExternalKeyLookup__c.field-meta.xml
<CustomField>
    <fullName>NewExternalKeyLookup__c</fullName>
    <formula>Name &amp; TEXT( BusinessArea__c ) &amp;  ImerysManufacturingPlant__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NewExternalKeyLookup</label>
    <type>Text</type>
</CustomField>