force-app/main/default/objects/Product2/fields/NonImerysProductTrading__c.field-meta.xml
<CustomField>
    <fullName>NonImerysProductTrading__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non-Imerys Product/Trading</label>
    <type>Checkbox</type>
</CustomField>