force-app/main/default/objects/Product2/fields/RegionForPlant__c.field-meta.xml
<CustomField>
    <fullName>RegionForPlant__c</fullName>
    <formula>IF(CONTAINS(&quot;BE - Willebroek,CA - LDI,CA - Terrebonne,CH - Bodio,JP - Kitakyushu&quot;, ManufacturingPlant__c ), &quot;APAC&quot;, 

IF(ISBLANK(Country_for_Plant__c),&quot;None&quot;, 

IF(CONTAINS(&quot;Antigua And Barbuda:Bahamas:Barbados:Belize:Bermuda:Cayman Islands:Costa Rica:Cuba:Curacao:Dominican Republic:El Salvador:Grenada:Guadeloupe:Guatemala:Guyana:Haiti:Honduras:Jamaica:Martinique:Nicaragua:Panama:Saint Kitts and Nevis:Canada:Mexico:United States:Argentina:Bolivia:Brazil:Chile:Colombia:Ecuador:Falkland Islands (Malvinas):Paraguay:Peru:Suriname:Trinidad And Tobago:Uruguay:Venezuela&quot;, Country_for_Plant__c), &quot;AMERICAS&quot;, 
IF(CONTAINS(&quot;China:Japan:Korea:Korea, Democratic Republic of (North Korea):Mongolia:South Korea:Taiwan:Australia:Fiji:New Caledonia:New Zealand:Brunei Darussalam:Cambodia:Indonesia:Laos:Malaysia:Philippines:Phillippines:Singapore:Thailand:Viet Nam:Vietnam:Afghanistan:Bangladesh:Bhutan:India:Myanmar:Nepal:Pakistan:Sri Lanka&quot;, Country_for_Plant__c), &quot;APAC&quot;, 


IF(CONTAINS(&quot;Algeria;Angola;Benin;Botswana;Burkina Faso;Burundi;Cameroon;Cape Verde;Central African Republic;Chad;Comoros;Congo;Cote d&apos;Ivoire;Djibouti;Equatorial Guinea;Eritrea;Ethiopia;Gabon;Gambia;Ghana;Guinea;Guinea-Bissau;Kenya;Lesotho;Liberia;Madagascar;Malawi;Mali;Mauritius;Mayotte;Morocco;Mozambique;Namibia;Niger;Nigeria;Reunion;Rwanda;Senegal;Seychelles;Sierra Leone;Somalia;South Africa;Sudan;Swaziland;Tanzania;Togo;Tunisia;Uganda;Zambia;Zimbabwe;Albania;Andorra;Armenia;Austria;Belarus;Belarussia;Belgique;Belgium;Bosnia and Herzegovina;Bulgaria;Croatia;Cyprus;Czechia;Denmark;Estonia;Finland;France;Georgia;Germany;Gibraltar;Greece;Hungary;Iceland;Ireland;Italy;Kazakhstan;Kosovo;Kyrgyzstan;Latvia;Liechtenstein;Lithuania;Luxembourg;Macedonia;Malta;Moldova;Monaco;Montenegro;Netherlands;Norway;Poland;Portugal;Romania;Russia;San Marino;Serbia;Slovakia;Slovenia;Spain;Suisse;Sweden;Great Britain;Switzerland;Turkmenistan;UK;Ukraine;United Kingdom;Uzbekistan;Azerbaijan;Bahrain;Egypt;Iran;Iraq;Israel;Jordan;Kuwait;Lebanon;Libyan Arab Jamahiriya;Oman;Qatar;Saudi Arabia;Syrian Arab Republic;Turkey;United Arab Emirates;Yemen&quot;, Country_for_Plant__c ), &quot;EMEA&quot;, &quot;None&quot;))) 
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Region For Plant</label>
    <type>Text</type>
</CustomField>